--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,14 @@
     <dimen name="dp22">22dp</dimen>
     <dimen name="dp12">12dp</dimen>
     <dimen name="dp18">18dp</dimen>
+    <dimen name="sp15">15sp</dimen>
+    <dimen name="dp150">150dp</dimen>
+    <dimen name="sp14">14sp</dimen>
+    <dimen name="dp190">190dp</dimen>
+    <dimen name="dp5">5dp</dimen>
+    <dimen name="dp180">180dp</dimen>
+    <dimen name="dp185">185dp</dimen>
+    <dimen name="dp16">16dp</dimen>
+    <dimen name="dp3">3dp</dimen>
 
 </resources>
