--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -2,19 +2,28 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/dp15"
+    android:layout_marginStart="@dimen/dp15"
     android:orientation="horizontal">
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp40"
+        android:layout_height="@dimen/dp40"
+
         android:id="@+id/civIcon"/>
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/dp150"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp10"
+        android:layout_marginStart="@dimen/dp15"
+        android:textSize="@dimen/sp17"
+        android:fontFamily="@font/arial"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:id="@+id/tvTitle"/>
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp12"
+        android:layout_marginStart="@dimen/dp112"
+        android:layout_width="@dimen/dp25"
+        android:layout_height="@dimen/dp25"
         android:id="@+id/ivQr"/>
-
-
 </androidx.appcompat.widget.LinearLayoutCompat>
