--- a/app/src/main/res/layout/privacy_item.xml
+++ b/app/src/main/res/layout/privacy_item.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
-    <com.whatsapp.clone.widgets.selectContactView.SelectContactView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/new_grp"/>
-    <com.whatsapp.clone.widgets.selectContactView.SelectContactView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp15"
-        android:id="@+id/new_contact"/>
+    android:orientation="vertical">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        tools:text="@tools:sample/first_names" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="@tools:sample/last_names" />
 </androidx.appcompat.widget.LinearLayoutCompat>
