--- a/app/src/main/res/layout/privacy_disappearing_messages.xml
+++ b/app/src/main/res/layout/privacy_disappearing_messages.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="@dimen/dp110"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvPrivacy_topic"
+            android:id="@+id/tvDisappearing"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/sp15"
@@ -30,9 +30,10 @@
             android:layout_height="wrap_content"
             tools:text="@tools:sample/full_names" />
     </androidx.appcompat.widget.LinearLayoutCompat>
+
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvEvent"
         android:layout_width="@dimen/dp10"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvDisappearing"/>
+        android:layout_height="wrap_content" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
