--- a/app/src/main/res/layout/privacy_personal_info.xml
+++ b/app/src/main/res/layout/privacy_personal_info.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/privacy_title"
+        android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         tools:text="@tools:sample/first_names" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/privacy_description"
+        android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp15"
