--- a/app/src/main/res/layout/privacy_personal_info.xml
+++ b/app/src/main/res/layout/privacy_personal_info.xml
@@ -9,6 +9,8 @@
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp2"
+        android:textSize="@dimen/sp_14"
         android:textStyle="bold"
         tools:text="@tools:sample/first_names" />
 
@@ -16,7 +18,8 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp15"
+        android:textSize="13sp"
+        android:layout_marginTop="@dimen/dp6"
         tools:text="@tools:sample/full_names" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
