--- a/app/src/main/res/layout/activity_privacy_lastseen.xml
+++ b/app/src/main/res/layout/activity_privacy_lastseen.xml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/dp20"
+    android:orientation="vertical">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold" />
     <com.whatsapp.clone.widgets.settingPrivacyLastSeen.SettingPrivacyLastSeen
-        android:id="@+id/lastSeen"
+        android:id="@+id/rbEveryone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <com.whatsapp.clone.widgets.settingPrivacyLastSeen.SettingPrivacyLastSeen
+        android:id="@+id/rbMyContact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <com.whatsapp.clone.widgets.settingPrivacyLastSeen.SettingPrivacyLastSeen
+        android:id="@+id/rbMyContactExcept"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <com.whatsapp.clone.widgets.settingPrivacyLastSeen.SettingPrivacyLastSeen
+        android:id="@+id/rbNobody"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp10" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
