privacy Settings impl

--- a/app/src/main/res/layout/privacy_lastseen.xml
+++ b/app/src/main/res/layout/privacy_lastseen.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="@dimen/dp5"
         android:paddingLeft="@dimen/dp15"
         android:textSize="@dimen/sp15"
+        android:buttonTint="@color/green"
         tools:text="@tools:sample/first_names" />
 
 
