webview add default message settings over

--- a/app/src/main/res/layout/view_setting_meta.xml
+++ b/app/src/main/res/layout/view_setting_meta.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="@dimen/dp10"
         android:layout_marginStart="@dimen/dp185"
         android:id="@+id/tvTitle"
-        android:textSize="@dimen/sp_14"/>
+        android:textSize="@dimen/sp14"/>
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
