--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray_85">#f1f3f5</color>
     <color name="gray_25">#c3c7ca</color>
     <color name="text_pressed">#e5e5e5</color>
+    <color name="blue">#027eb5</color>
 </resources>
