--- a/app/src/main/res/layout/privacy_personal_info.xml
+++ b/app/src/main/res/layout/privacy_personal_info.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp2"
-        android:textSize="@dimen/sp_14"
+        android:textSize="@dimen/sp14"
         android:textStyle="bold"
         tools:text="@tools:sample/first_names" />
 
