--- a/app/src/main/res/layout/view_setting_item.xml
+++ b/app/src/main/res/layout/view_setting_item.xml
@@ -35,7 +35,7 @@
             android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_14" />
+            android:textSize="@dimen/sp14" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
