--- a/app/src/main/res/layout/view_user_info.xml
+++ b/app/src/main/res/layout/view_user_info.xml
@@ -14,8 +14,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ivProfile"
-            android:layout_width="@dimen/dp_65"
-            android:layout_height="@dimen/dp_65"
+            android:layout_width="@dimen/dp65"
+            android:layout_height="@dimen/dp65"
             android:layout_marginStart="15dp"
             android:layout_marginTop="16dp"
             tools:srcCompat="@tools:sample/avatars[1]" />
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
-                android:textSize="@dimen/sp_14" />
+                android:textSize="@dimen/sp14" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.AppCompatImageView
