--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="dp_65">65dp</dimen>
-    <dimen name="sp_14">14sp</dimen>
     <dimen name="sp17">17sp</dimen>
     <dimen name="dp20">20dp</dimen>
     <dimen name="dp15">15dp</dimen>
@@ -33,11 +31,16 @@
     <dimen name="dp2">2dp</dimen>
     <dimen name="sp16">16sp</dimen>
     <dimen name="dp50">50dp</dimen>
-    <dimen name="sp_12">12sp</dimen>
     <dimen name="dp28">28dp</dimen>
     <dimen name="dp60">60dp</dimen>
     <dimen name="dp100">100dp</dimen>
     <dimen name="dp120">120dp</dimen>
     <dimen name="dp130">130dp</dimen>
+    <dimen name="dp80">80dp</dimen>
+    <dimen name="dp45">45dp</dimen>
+    <dimen name="dp70">70dp</dimen>
+    <dimen name="dp65">65dp</dimen>
+    <dimen name="dp55">55dp</dimen>
+
 
 </resources>
