--- a/app/src/main/res/layout/privacy_read_receipts.xml
+++ b/app/src/main/res/layout/privacy_read_receipts.xml
@@ -29,7 +29,7 @@
             tools:text="@tools:sample/first_names" />
 
         <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/sc_receipts"
+            android:id="@+id/scReceipts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dp12"
