--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,6 +41,13 @@
     <dimen name="dp70">70dp</dimen>
     <dimen name="dp65">65dp</dimen>
     <dimen name="dp55">55dp</dimen>
+    <dimen name="dp35">35dp</dimen>
+    <dimen name="dp38">38dp</dimen>
+    <dimen name="dp36">36dp</dimen>
+    <dimen name="dp48">48dp</dimen>
+    <dimen name="dp46">46dp</dimen>
+    <dimen name="dp4">4dp</dimen>
+    <dimen name="dp68">68dp</dimen>
 
 
 </resources>
