--- a/app/src/main/res/layout/setting_two_step.xml
+++ b/app/src/main/res/layout/setting_two_step.xml
@@ -5,13 +5,18 @@
     android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="@dimen/dp50"
-        android:layout_height="@dimen/dp50"
+        android:id="@+id/civTwoStepIcon"
+        android:layout_width="@dimen/dp100"
+        android:layout_height="@dimen/dp100"
         android:layout_gravity="center"
-        android:id="@+id/civTwoStepIcon"/>
+        android:layout_marginTop="@dimen/dp20" />
+
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="@dimen/dp10"
+        android:id="@+id/tvDescription"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvDescription"/>
+        android:layout_marginHorizontal="@dimen/dp20"
+        android:layout_marginTop="@dimen/dp20"
+        android:textAlignment="center" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
