request setting binding and flow of the setting is done and popup card in Change number id done

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -55,6 +55,7 @@
     <dimen name="dp490">490dp</dimen>
     <dimen name="dp480">480dp</dimen>
     <dimen name="dp475">475dp</dimen>
+    <dimen name="dp430">430dp</dimen>
 
 
 </resources>
