--- a/app/src/main/res/layout/account_item.xml
+++ b/app/src/main/res/layout/account_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/ripple_effect"
+    android:id="@+id/llParent"
     android:clickable="true"
     android:focusable="true"
     android:orientation="horizontal"
