--- a/app/src/main/res/layout/activity_account_item.xml
+++ b/app/src/main/res/layout/activity_account_item.xml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/dp10"
     android:orientation="vertical">
 
     <com.whatsapp.clone.widgets.accountItemView.AccountItemView
+        android:id="@+id/aivPrivacy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/aivPrivacy"
-         />
+        android:layout_marginTop="@dimen/dp5" />
 
     <com.whatsapp.clone.widgets.accountItemView.AccountItemView
         android:id="@+id/aivSecurity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         />
+        android:layout_marginTop="@dimen/dp5" />
+
     <com.whatsapp.clone.widgets.accountItemView.AccountItemView
         android:id="@+id/aivVerification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginTop="@dimen/dp5" />
+
     <com.whatsapp.clone.widgets.accountItemView.AccountItemView
         android:id="@+id/aivChangeNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginTop="@dimen/dp5" />
+
     <com.whatsapp.clone.widgets.accountItemView.AccountItemView
         android:id="@+id/aivRequestInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginTop="@dimen/dp5" />
+
     <com.whatsapp.clone.widgets.accountItemView.AccountItemView
         android:id="@+id/aivDeleteAcc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginTop="@dimen/dp5" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
