switch color is done and two/step card was created

--- a/app/src/main/res/layout/activity_privacy_lastseen.xml
+++ b/app/src/main/res/layout/activity_privacy_lastseen.xml
@@ -20,7 +20,9 @@
     <com.whatsapp.clone.widgets.settingPrivacyLastSeen.SettingPrivacyLastSeen
         android:id="@+id/rbMyContact"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:checkedButton="@id/rbMyContact"
+        />
 
     <com.whatsapp.clone.widgets.settingPrivacyLastSeen.SettingPrivacyLastSeen
         android:id="@+id/rbMyContactExcept"
