--- a/app/src/main/res/layout/activity_privacy_live_location.xml
+++ b/app/src/main/res/layout/activity_privacy_live_location.xml
@@ -20,9 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp40"
-        android:textColor="@color/black"
+        android:textColor="@color/lite"
         android:textSize="@dimen/sp16"
-        android:layout_marginTop="@dimen/dp55"/>
+        android:layout_marginTop="@dimen/dp50"/>
 
     <View
         android:layout_width="match_parent"
