--- a/app/src/main/res/layout/setting_security_switch.xml
+++ b/app/src/main/res/layout/setting_security_switch.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -21,6 +22,8 @@
             android:id="@+id/scSecurity"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp35"
+            app:trackTint="@drawable/switch_track_selector"
+            app:thumbTint="@drawable/switch_thumb_selector"
             android:layout_marginStart="@dimen/dp10" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
