Delete my acc setting is done

--- a/app/src/main/res/layout/activity_delete_my_account.xml
+++ b/app/src/main/res/layout/activity_delete_my_account.xml
@@ -2,13 +2,13 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/dp20"
     android:orientation="vertical">
 
     <com.whatsapp.clone.widgets.settingDltAccNumber.SettingDltAccNumber
         android:id="@+id/mDelete"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp20"/>
 
     <com.whatsapp.clone.widgets.setingDeleteAccItem.SettingDeleteAccItem
         android:id="@+id/lineOne"
@@ -42,6 +42,7 @@
 
     <com.whatsapp.clone.widgets.settingDeleteMyacc.DeleteMyAcc
         android:id="@+id/mDeleteAcc"
+        android:layout_margin="@dimen/dp20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp10" />
