--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:innerRadius="0dp"
     android:shape="ring"
-    android:thickness="5dp"
+    android:thickness="2dp"
     android:useLevel="false">
 
-    <solid android:color="@color/black" />
+    <solid android:color="@color/gray_25" />
 
 </shape>
