--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -56,6 +56,7 @@
     <dimen name="dp480">480dp</dimen>
     <dimen name="dp475">475dp</dimen>
     <dimen name="dp430">430dp</dimen>
+    <dimen name="dp1">1dp</dimen>
 
 
 </resources>
