--- a/app/src/main/res/layout/change_num_card.xml
+++ b/app/src/main/res/layout/change_num_card.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:layout_margin="@dimen/dp20"
-    >
+    android:layout_margin="@dimen/dp20">
 
     <androidx.cardview.widget.CardView
         android:layout_width="380dp"
