--- a/app/src/main/res/layout/privacy_item.xml
+++ b/app/src/main/res/layout/privacy_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llParent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -18,6 +18,6 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="@tools:sample/last_names"
-        android:paddingBottom="5dp"/>
+        android:paddingBottom="5dp"
+        tools:text="@tools:sample/last_names" />
 </androidx.appcompat.widget.LinearLayoutCompat>
