chat Backup Setting is done

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -73,6 +73,7 @@
     <dimen name="dp400">400dp</dimen>
     <dimen name="dp350">350dp</dimen>
     <dimen name="dp500">500dp</dimen>
+    <dimen name="dp78">78dp</dimen>
 
 
 </resources>
