--- a/app/src/main/res/drawable/ripple_effect.xml
+++ b/app/src/main/res/drawable/ripple_effect.xml
@@ -1,22 +1,11 @@
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <corners android:radius="3dp" />
-            <solid android:color="@color/gray_85" />
-        </shape>
-    </item>
-    <item android:state_focused="true">
-        <shape android:shape="rectangle">
-            <padding android:padding="1dp" />
-            <corners android:radius="5dp" />
-            <solid android:color="@android:color/white" />
-        </shape>
-    </item>
+<?xml version="1.0" encoding="UTF-8"?>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/gray_25">
     <item>
-        <shape android:shape="rectangle">
+        <shape>
             <padding android:padding="1dp" />
             <corners android:radius="5dp" />
             <solid android:color="@android:color/white" />
         </shape>
     </item>
-</selector>
+</ripple>
