--- a/app/src/main/res/layout/text_and_switch.xml
+++ b/app/src/main/res/layout/text_and_switch.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tvTitle"
+        android:layout_width="@dimen/dp150"
+        android:textSize="@dimen/sp15"
         android:layout_height="wrap_content"
-        android:id="@+id/tvTitle"/>
+        android:textColor="@color/black" />
+
     <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/scSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/switch_thumb_selector"
-        app:trackTint="@drawable/switch_track_selector"
+        android:layout_marginStart="@dimen/dp100"
         app:thumbTint="@drawable/switch_thumb_selector"
-        android:id="@+id/scSwitch"/>
+        app:trackTint="@drawable/switch_track_selector" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
