working on storage and data

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -74,6 +74,8 @@
     <dimen name="dp350">350dp</dimen>
     <dimen name="dp500">500dp</dimen>
     <dimen name="dp78">78dp</dimen>
+    <dimen name="sp18">18sp</dimen>
+    <dimen name="dp230">230dp</dimen>
 
 
 </resources>
