storage setting fully done and some changes in notification setting

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -77,6 +77,8 @@
     <dimen name="dp170">170dp</dimen>
     <dimen name="sp18">18sp</dimen>
     <dimen name="dp230">230dp</dimen>
+    <dimen name="dp26">26dp</dimen>
+    <dimen name="dp420">420dp</dimen>
 
 
 </resources>
