--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="notificationTitle">#667781</color>
     <color name="textColor">#757575</color>
     <color name="trans">#00000000</color>
+    <color name="licenses">#112d2e</color>
     <color name="helpAction">#f7f8fa</color>
 
     <color name="disable_foreground_grey">#42221f1f</color>
