--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -79,6 +79,7 @@
     <dimen name="dp230">230dp</dimen>
     <dimen name="dp26">26dp</dimen>
     <dimen name="dp420">420dp</dimen>
+    <dimen name="dp290">290dp</dimen>
 
 
 </resources>
