--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="disableColor">#aebac1</color>
     <color name="notificationTitle">#667781</color>
     <color name="textColor">#757575</color>
-    <color name="trans">#00000000</color>
+    <color name="threeDot">#667781</color>
     <color name="licenses">#112d2e</color>
     <color name="helpAction">#f7f8fa</color>
 
