--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="actionOverflowButtonStyle">@style/Threedotcolor</item>
+    </style>
+    <style name="Threedotcolor" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="tint">#667781</item>
     </style>
 </resources>
